--- a/Make_MovieAppService_with_ReactJs/React_Basic/3.unit_Converter.html
+++ b/Make_MovieAppService_with_ReactJs/React_Basic/3.unit_Converter.html
@@ -8,15 +8,18 @@
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    const root = document.getElementById("root");
-
-    const App = () => {
-      const [minutes, setMinutes] = React.useState(0);
+    function App() {
+      const [amount, setAmount] = React.useState(0);
+      const [inverted, setInverted] = React.useState(false);
       const onChange = (event) => {
-        setMinutes(() => event.target.value);
+        setAmount(() => event.target.value);
       };
       const reset = () => {
-        setMinutes(0);
+        setAmount(0);
+      };
+      const onInvert = () => {
+        reset();
+        setInverted((current) => !current);
       };
 
       return (
@@ -34,27 +37,34 @@
           <div>
             <label htmlFor="minutes">Minutes</label>
             <input
-              value={minutes}
+              value={inverted ? amount * 60 : amount}
               id="minutes"
               placeholder="Minutes"
               type="number"
               onChange={onChange}
+              disabled={inverted}
+              //disabled={flipped === true}
             />
           </div>
           <div>
             <label htmlFor="hours">Hours</label>
             <input
-              value={Math.round(minutes / 60)}
+              value={inverted ? amount : Math.round(amount / 60)}
               id="hours"
               placeholder="Hours"
               type="number"
-              disabled
+              onChange={onChange}
+              // flipped가 False 이면 Disaled, True 이면 Enabled
+              disabled={!inverted}
+              //disabled={flipped === false}
             />
           </div>
           <button onClick={reset}>Reset</button>
+          <button onClick={onInvert}>{inverted ? "Turn back" : "Invert"}</button>
         </div>
       );
-    };
+    }
+    const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
   </script>
 </html>
