--- a/Make_MovieAppService_with_ReactJs/React_Basic/5.Props_Parent_to_Child.html
+++ b/Make_MovieAppService_with_ReactJs/React_Basic/5.Props_Parent_to_Child.html
@@ -7,6 +7,7 @@
   <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
     // function SaveBtn() {
     //   return (
@@ -62,23 +63,24 @@
 
     // props를 전달받아 사용하는 것과 같으나 ShortCut(지름길)
     // props.~~ 대신 ~~으로 바로 사용가능
-    function Btn({ text, changeValue }) {
-      return (
-        <button
-          onClick={changeValue}
-          style={{
-            backgroundColor: "tomato",
-            color: "white",
-            padding: "10px 20px",
-            border: 0,
-            borderRadius: 10,
-            fontSize: 10,
-          }}
-        >
-          {text}
-        </button>
-      );
-    }
+
+    // function Btn({ text, changeValue }) {
+    //   return (
+    //     <button
+    //       onClick={changeValue}
+    //       style={{
+    //         backgroundColor: "tomato",
+    //         color: "white",
+    //         padding: "10px 20px",
+    //         border: 0,
+    //         borderRadius: 10,
+    //         fontSize: 10,
+    //       }}
+    //     >
+    //       {text}
+    //     </button>
+    //   );
+    // }
 
     // 아래 코드에서 onClick은 실제의 EventListener가 아니라 Btn으로 가는 Props이다.
     // <Btn text={value} onClick={changeValue}/>
@@ -86,20 +88,56 @@
     // state가 바뀌면 자동으로 re-render를 하게 된다.
     // 따라서 Continue 버튼도 다시 render가 되고있음.
     // React memo를 사용하면 state의 변경이 없는 것은 다시 render를 하지 않는다.
-    const MemorizedBtn = React.memo(Btn);
+
+    // const MemorizedBtn = React.memo(Btn);
+    // function App() {
+    //   const [value, setValue] = React.useState("Save Changes");
+    //   const changeValue = () => {
+    //     setValue("RevertChanges");
+    //   };
+    //   return (
+    //     <div>
+    //       <MemorizedBtn text={value} changeValue={changeValue} />
+    //       <MemorizedBtn text="Continue" />
+    //     </div>
+    //   );
+    // }
+    // Btn({text:"save Changes"}) == <Btn text="Save Changes"/>
+    //
+    // const root = document.getElementById("root");
+    // ReactDOM.render(<App />, root);
+
+    // 아래와 같이 fontSize = 16 으로 하면 Default값을 줄 수있다.
+    function Btn({ text, fontSize = 16 }) {
+      return (
+        <button
+          style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding: "10px 20px",
+            border: 0,
+            borderRadius: 10,
+            fontSize,
+          }}
+        >
+          {text}
+        </button>
+      );
+    }
+    // https://unpkg.com/prop-types@15.7.2/prop-types.js
+    // Reactjs PropsType 을 사용함으로써 전달되는 Props의 타입을 확인한다.
+    Btn.propTypes = {
+      text: PropTypes.string.isRequired,
+      fontSize: PropTypes.number,
+    };
     function App() {
-      const [value, setValue] = React.useState("Save Changes");
-      const changeValue = () => {
-        setValue("RevertChanges");
-      };
       return (
         <div>
-          <MemorizedBtn text={value} changeValue={changeValue} />
-          <MemorizedBtn text="Continue" />
+          <Btn text="Save Changes" fontSize={10} />
+          <Btn text={"Continue"} />
         </div>
       );
     }
-    // Btn({text:"save Changes"}) == <Btn text="Save Changes"/>
 
     const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
